--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>404 page not found - Alice&#39;s scribbles</title>
+  <title>404 page not found - alice&#39;s scribbles</title>
   <meta name="renderer" content="webkit" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="AliceZ" />
+<meta name="author" content="aliceZ" /><meta name="description" content="alice&#39;s Scribbles" />
 
 
 
@@ -35,19 +35,19 @@
 
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
-<link href="/sass/main.min.cfbbaca989572c414424dde1c6234784d95564b53c46a56260a203ab17b8ad57.css" rel="stylesheet">
+<link href="/sass/main.min.a8628e5a0bd7dfc239a2f4103936248b5ec512783725dff8f5bace7bd9cbfdc7.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css" integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY=" crossorigin="anonymous">
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="alice&#39;s Scribbles" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://alicescribbles.github.io/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content=""><meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="alice&#39;s Scribbles"><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="alice&#39;s Scribbles"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
@@ -62,7 +62,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">Alice&#39;s Scribbles</a>
+    <a href="/" class="logo">alice&#39;s scribbles</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -72,12 +72,12 @@
 </div>
 <nav id="mobile-menu" class="mobile-menu slideout-menu">
   <ul class="mobile-menu-list">
-    <a href="/">
-        <li class="mobile-menu-item">🏠Home</li>
-      </a><a href="/post/">
+    <a href="/post/">
         <li class="mobile-menu-item">📚Archives</li>
       </a><a href="/tags/">
         <li class="mobile-menu-item">🏷️ Tags</li>
+      </a><a href="/dir1/">
+        <li class="mobile-menu-item">✨Friends</li>
       </a>
   </ul>
 
@@ -89,7 +89,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo">Alice&#39;s Scribbles</a>
+  <a href="/" class="logo">alice&#39;s scribbles</a>
 </div>
 
 
@@ -99,11 +99,11 @@
 <nav class="site-navbar">
   <ul id="menu" class="menu">
     <li class="menu-item">
-        <a class="menu-item-link" href="/">🏠Home</a>
-      </li><li class="menu-item">
         <a class="menu-item-link" href="/post/">📚Archives</a>
       </li><li class="menu-item">
         <a class="menu-item-link" href="/tags/">🏷️ Tags</a>
+      </li><li class="menu-item">
+        <a class="menu-item-link" href="/dir1/">✨Friends</a>
       </li>
   </ul>
 </nav>
@@ -157,7 +157,7 @@
   <span class="copyright-year">
     &copy; 
     2022 - 
-    2023<span class="heart"><i class="iconfont icon-heart"></i></span><span>AliceZ</span>
+    2023<span class="heart"><i class="iconfont icon-heart"></i></span><span>aliceZ</span>
   </span>
 </div>
 
