--- a/friends/index.html
+++ b/friends/index.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="aliceZ" /><meta name="description" content="alice&#39;s Scribbles" />
+<meta name="author" content="aliceZ" /><meta name="description" content="alice&#39;s scribbles" />
 
 
 
@@ -42,14 +42,14 @@
 
 
 <meta property="og:title" content="_Index" />
-<meta property="og:description" content="alice&#39;s Scribbles" />
+<meta property="og:description" content="alice&#39;s scribbles" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://alicescribbles.github.io/friends/" />
 
 <meta itemprop="name" content="_Index">
-<meta itemprop="description" content="alice&#39;s Scribbles"><meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="alice&#39;s scribbles"><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="_Index"/>
-<meta name="twitter:description" content="alice&#39;s Scribbles"/>
+<meta name="twitter:description" content="alice&#39;s scribbles"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
