--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="aliceZ" /><meta name="description" content="alice&#39;s Scribbles" />
+<meta name="author" content="aliceZ" /><meta name="description" content="alice&#39;s scribbles" />
 
 
 
@@ -40,14 +40,14 @@
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="alice&#39;s Scribbles" />
+<meta property="og:description" content="alice&#39;s scribbles" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://alicescribbles.github.io/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="alice&#39;s Scribbles"><meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="alice&#39;s scribbles"><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="alice&#39;s Scribbles"/>
+<meta name="twitter:description" content="alice&#39;s scribbles"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
