--- a/friends/index.html
+++ b/friends/index.html
@@ -74,12 +74,16 @@
 </div>
 <nav id="mobile-menu" class="mobile-menu slideout-menu">
   <ul class="mobile-menu-list">
-    <a href="/post/">
+    <a href="/">
+        <li class="mobile-menu-item">🏠Home</li>
+      </a><a href="/post/">
         <li class="mobile-menu-item">📚Archives</li>
       </a><a href="/tags/">
         <li class="mobile-menu-item">🏷️ Tags</li>
       </a><a href="/friends/">
         <li class="mobile-menu-item">✨Friends</li>
+      </a><a href="/memo/">
+        <li class="mobile-menu-item">✉️ Memo</li>
       </a>
   </ul>
 
@@ -101,11 +105,15 @@
 <nav class="site-navbar">
   <ul id="menu" class="menu">
     <li class="menu-item">
+        <a class="menu-item-link" href="/">🏠Home</a>
+      </li><li class="menu-item">
         <a class="menu-item-link" href="/post/">📚Archives</a>
       </li><li class="menu-item">
         <a class="menu-item-link" href="/tags/">🏷️ Tags</a>
       </li><li class="menu-item">
         <a class="menu-item-link" href="/friends/">✨Friends</a>
+      </li><li class="menu-item">
+        <a class="menu-item-link" href="/memo/">✉️ Memo</a>
       </li>
   </ul>
 </nav>
@@ -120,11 +128,11 @@
 <h1 id="友链合集">友链合集</h1>
 <p>本站的成功搭建离不开若干朋友的技术支持，在此鸣谢 🥳</p>
 <ul>
-<li><a href="http://ayu.land/">甜鱼/Ayu</a></li>
+<li><u><a href="http://ayu.land/">甜鱼/Ayu</a></li>
 <li><a href="https://zcy.moe/">茨月</a></li>
 <li><a href="https://lethedryad.github.io/">Hippocrene</a></li>
 <li><a href="https://blog.pieris05.com/">Pieris&rsquo; Blog</a></li>
-<li><a href="https://recursionsheep.github.io/">Recuision&rsquo;s Blog</a></li>
+<li><a href="https://recursionsheep.github.io/">Recuision&rsquo;s Blog</a></u></li>
 </ul>
 </section>
 
