add new post soft-spring

--- a/accessing-archives/index.html
+++ b/accessing-archives/index.html
@@ -136,7 +136,7 @@
 <p>封闭毛象实例：在博客域名后加&quot;/mastodon-XXXX（四位日期数字）-archive&quot;，其中XXXX为我在此实例账号中置顶动态的发布日期，以UTC+0时区为准。例如，若该动态发布日期为1月1日，则存档页面访问地址为alicez.ink/mastodon-0101-archive/</p>
 </li>
 </ul>
-<p>十分感谢朋友<a href="https://ayu.land/"><u>Ayu</u></a>帮忙提供爬虫工具_(:з」∠)_</p>
+<p>十分感谢朋友<a href="https://ayu.land/"><u>@Ayu</u></a>帮忙提供爬虫工具_(:з」∠)_</p>
 </section>
 
 <nav class="pagination">
