--- a/friends/index.html
+++ b/friends/index.html
@@ -133,7 +133,8 @@
 <li><a href="https://lethedryad.github.io/">Hippocrene</a></li>
 <li><a href="https://blog.pieris05.com/">Pieris&rsquo; Blog</a></li>
 <li><a href="https://recursionsheep.github.io/">Recuision&rsquo;s Blog</a></li>
-<li><a href="https://sunnycloudyang.github.io/">Origakid</a></u></li>
+<li><a href="https://sunnycloudyang.github.io/">Origakid</a></li>
+<li><a href="https://shuangs.space/">Shuang&rsquo;s Space</a></u></li>
 </ul>
 </section>
 
